@@ -18,8 +18,10 @@ package org.keycloak.operator;
 
 import org.keycloak.operator.crds.v2alpha1.deployment.ValueOrSecret;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.TreeMap;
 import java.util.stream.Collectors;
 
 public final class Constants {
@@ -33,10 +35,10 @@ public final class Constants {
     public static final String COMPONENT_LABEL = "app.kubernetes.io/component";
     public static final String KEYCLOAK_COMPONENT_LABEL = "keycloak.org/component";
 
-    public static final Map<String, String> DEFAULT_LABELS = Map.of(
+    public static final Map<String, String> DEFAULT_LABELS = Collections.unmodifiableMap(new TreeMap<>(Map.of(
             "app", NAME,
             MANAGED_BY_LABEL, MANAGED_BY_VALUE
-    );
+    )));
 
     public static final String DEFAULT_LABELS_AS_STRING = DEFAULT_LABELS.entrySet().stream()
             .map(e -> e.getKey() + "=" + e.getValue())
